--- a/gb/news2008_3.md
+++ b/gb/news2008_3.md
@@ -1,4 +1,8 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/kuujke2745/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kuujke2745/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kuujke2745/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11764069.md#1" target="_blank">子女搬出自立 房子太大太空 空巢老人怎么办？</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11764069.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_211775290-150x120.jpg" align ="left"></a>随着子女长大成人，陆续搬出独立，越来越多婴儿潮一代父母发现，日常生活虽清闲了许多，但也伴随孤独和忧郁，出现“空巢综合症”。处于这个人生阶段，许多老人都得问自己，是大屋换小房？还是换幢更豪华的房子？或把目前房屋装修一新？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 5:17 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11764045.md#1" target="_blank">靠1欧元拍卖计划 意大利乡村小镇展新颜</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11764045.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_1469255324-150x120.jpg" align ="left"></a>去年1月，媒体报导意大利西西里森布卡小镇（Sambuca）一欧元（相当于1.47加元）起价拍卖当地16幢政府名下住宅，条件是买下后，买家花至少1.5万欧元装修，并支付小镇5,000欧元押金只到装修完成。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 4:15 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11763828.md#1" target="_blank">武汉爆发似SARS“不明肺炎”民众如何防范？</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11763828.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/pneumonia-010220-150x120.jpg" align ="left"></a>武汉近日爆发“不明病毒性肺炎”，民众担忧多年前夺走数百条人命的SARS（严重急性呼吸道症候群）重现。由于中共官方一向有隐瞒疫情的前科，专家建议身在疫区或近日前往当地的民众一定要做好防范。为因应武汉市的肺炎流行疫情，台湾已对武汉直航的班机进行登机检疫，希望将疫情阻绝于境外。面对不明肺炎 民众如何防范？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 2:29 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/27/n11748498.md#1" target="_blank">登山健行不难 带孩子上山的5个理由</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/27/n11748498.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191227_sally_play_01-1-150x120.jpg" align ="left"></a>台湾有70%是山，在你家附近一定有几条郊山步道，其实登山健行没有那么难，就是找家里附近的步道去走走！再也不怕孩子放电没处去！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 12:55 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11763643.md#1" target="_blank">加国新屋房价跌 多伦多温哥华跌幅最突出</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11763643.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_1023556714-150x120.jpg" align ="left"></a>加拿大统计局数据显示，去年11月新屋房价指数（NHRI）出现微幅下跌。总体看来，当月加国新屋房价指数虽基本没什么变化，但呈与两极发展趋势。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 11:20 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/31/n11756724.md#1" target="_blank">晚上穿袜子睡觉 调节体温又助眠 还有4个好处</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/31/n11756724.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/sleep-with-socks_159094022-150x120.jpg" align ="left"></a>人每天都需要7个小时的睡眠。不少人会有难以入睡的情况，穿袜子睡觉能让你尽快睡着，更有许多其它好处。为什么穿袜子睡觉可以助眠？首先来看看人身体的体温调节运作模式。人的核心体温和生理时钟息息相关。睡觉时穿上袜子，可以让双脚暖和起来，增加足部的血液流量，降低核心体温，告诉大脑“该睡觉了”。穿袜子睡觉带来的四大好处：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 9:52 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11762236.md#1" target="_blank">拉举100公斤杠铃 俄11岁男童练成大力士</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/2/n11762236.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Fotolia_5896286_Subscription_L-150x120.jpg" align ="left"></a>俄罗斯一名11岁男童喜欢举重，也一直在健身房锻炼身体。尽管年纪很小，但他已经能拉举100公斤重的杠铃，也能拉动上吨重的汽车，如同一个小小大力士。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 3:34 PM			</td></tr>
@@ -25,15 +29,5 @@
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/27/n11748796.md#1" target="_blank">寻找好玩的元素 增加孩子登山健行乐趣</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/27/n11748796.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191228_sally_play_01-150x120.jpg" align ="left"></a>登山健行，对孩子来说，最重要的就是一条有趣好玩的路线，可以让他们在活动中找到欢乐；而一条景色优美的路线，是让父母享受旅程的重要元素，也可让成人放松平时工作紧绷的神经；一条充满冒险的路线，可以让全家人经历千辛万苦后，一起享有达成目标的成就感。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 11:09 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/30/n11756258.md#1" target="_blank">卧床不动易长褥疮 中医如何治疗？4方法预防</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/30/n11756258.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/bed-sore3_572190847-150x120.jpg" align ="left"></a>褥疮，又称压疮、压力性溃疡，往往是因为年长者或病人长期卧床、坐轮椅，无法改变姿势，所以身体的骨头突起处持续受到压迫、摩擦等而出现皮肤病变。最常长褥疮的地方包括尾椎、臀部、肩背部等。中医称褥疮为“席疮”。如何用中药和外敷方法治疗褥疮？如何预防皮肤长出褥疮？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 6:41 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/30/n11756229.md#1" target="_blank">胃不舒服，可能是肝病？如何判断</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/30/n11756229.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_794065012-150x120.jpg" align ="left"></a>临床上，有些人出现消化道方面的症状，如恶心、胃痛、食欲不振等，怀疑是胃有毛病，吃了胃药后却不见效果，到医院进一步检查，结果发现是肝脏出了问题。肝病为何引发胃部不适？出现胃部不适是得了肝病还是胃病？家医科医师林旭华提供初步判断方法......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 4:11 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/30/n11755050.md#1" target="_blank">2019东湾房市11月份最新数据（下）</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/30/n11755050.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/concord2-150x120.png" align ="left"></a>文：李欧?大纪元
-旧金山湾区，东湾十一月房市因进入淡季，销售量几乎全面下滑，但在价格方面较上个月有涨幅的城市超过一半，与湾区其它城市大致相同。
-
-以本次刊登的东湾城市来看，纽华克（Newark）、都柏林（Dublin）、康科德（Concord）、拉法叶（Lafayette）、核桃溪（Walnut Creek）等市.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 11:15 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/30/n11755222.md#1" target="_blank">都会男女会客室：前妻改嫁，还需再连络？</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/30/n11755222.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/1003190818232175-150x120.jpg" align ="left"></a>理解前妻所为背后的善意，并诚心祝福她重新过自己的生活，当您真正愿意释怀，新的缘分或许会悄然降临喔！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 8:20 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/28/n11751570.md#1" target="_blank">2020年的8大饮食趋势 让你越吃越健康</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/28/n11751570.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/fruit-vegetable_1377847055-150x120.jpg" align ="left"></a>随着新式营养学的普及，人们越来越重视饮食与健康的关系。在新的一年里，对于健康的追求，正让饮食突破国界与文化的藩篱，人们也纷纷从古老的饮食智慧中，寻找全新的启发。下面，我们提出的2020年8大饮食趋势。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 7:53 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/29/n11753548.md#1" target="_blank">冬季房市低迷吗？旧金山高端康斗照卖不误</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/29/n11753548.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/05Residences-Penthouse_Collection-Carousel-03-150x120.jpg" align ="left"></a>文：李欧?大纪元
-今年以来，尤其在过去的几个月，旧金山湾区难得用“低迷、下滑”等词来形容房市概况，整个湾区的房价几乎都在下修，尽管库存低到只剩一个月或半个月，买气仍相当保守，尤其进入冬季后，上市时间更是逐渐在拉长。但你说这是买家市场了吗？??恐怕未必。
-
-拿旧金山房市来说，十一月各种房型的价格都在震荡，没有超高价.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 6:51 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/news2008_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/news2008.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/kuujke2745/djy/blob/master/gb/news2008_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/kuujke2745/djy/blob/master/gb/news2008_3.md#1<br><a href="https://github.com/kuujke2745/djy/blob/master/gb/news2008_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kuujke2745/djy/blob/master/gb/news2008_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2008_3.htm">http://www.epochtimes.com/gb/news2008_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
