--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/4/n11768055.md#1">川普击毙伊朗二号人物 对中共释何种信号</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/4/n11767049.md#1">伊朗二号人物索莱马尼被击毙 他是什么人？</a><br>
 <br><p><a href="https://github.com/kuujke2745/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/9/n11779125.md#1">朱同：没有暴徒，只有暴政</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/9/n11778817.md#1">港人心声：不想看到宝岛成为第二个香港</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11777961.md#1">王友群：中共利用伊朗问题煽风点火真相透视</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11777869.md#1">周晓辉：伊朗报复美国雷声大 中俄动作频频</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/7/n11775350.md#1">袁斌：环时变相为苏莱曼尼唱挽歌被网民打脸</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/7/n11775628.md#1">【名家专栏】社交媒体成为教师有效交流平台</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/7/n11775572.md#1">【名家专栏】百年前已证明社会主义必失败</a><br>
-<a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/7/n11775166.md#1">周晓辉：习近平警告王沪宁 断舍离是根本</a><br>
 <br><p><a href="https://github.com/kuujke2745/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
